added db functions and schema

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,5 @@ services:
     environment:
       - var
     volumes:
-      - ./data:/data
+      - ./version_db:/data
     restart: unless-stopped
