--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   version:
     build: 
-      context: ./app
+      context: .
       dockerfile: Dockerfile
     container_name: version
     ports:
